[package]
name = "elysees"
version = "0.3.0"
authors = ["Jad Elkhaleq Ghalayini", "The Servo Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/tekne/elysees"
description = "A fork of triomphe, now with more pointer trickery"
keywords = ["arc", "ffi", "sync", "data-structure"]
categories = ["concurrency", "data-structures"]
edition = "2021"

[features]
std = []
default = ["serde", "stable_deref_trait", "unsize", "std"]

[dependencies]
memoffset = "0.6"
serde = { version = "1.0", default-features = false, optional = true }
stable_deref_trait = { version = "1.1.1", default-features = false, optional = true }
unsize = { version = "1.1", optional = true }
arc-swap = { version = "1.3.0", optional = true }

[dev-dependencies]
lazy_static = "^1.4"